force-app/main/default/objects/Tournament_Configuration__c/Tournament_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Tournament Configuration</label>
</CustomObject>