force-app/main/default/objects/Tournament_Configuration__c/fields/Group_Stage_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Group_Stage_Prefix__c</fullName>
    <defaultValue>&quot;Group Stage&quot;</defaultValue>
    <label>Group Stage Prefix</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>