force-app/main/default/objects/Tournament_Configuration__c/fields/Knockout_Stage_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Knockout_Stage_Prefix__c</fullName>
    <defaultValue>&quot;Knockout Stage&quot;</defaultValue>
    <label>Knockout Stage Prefix</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>