force-app/main/default/objects/Tournament_Configuration__c/fields/Max_Group_Matches_Per_Team__c.field-meta.xml
<CustomField>
    <fullName>Max_Group_Matches_Per_Team__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Max Group Matches Per Team</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>