force-app/main/default/objects/Tournament_Configuration__c/fields/Max_Groups__c.field-meta.xml
<CustomField>
    <fullName>Max_Groups__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Max Groups</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>