force-app/main/default/objects/Tournament_Configuration__c/fields/Max_Teams_Per_Group__c.field-meta.xml
<CustomField>
    <fullName>Max_Teams_Per_Group__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Max Teams Per Group</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>